--- a/home.html
+++ b/home.html
@@ -3,50 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <3 -->
-    <link rel="stylesheet" href="./files/styling.css">
-    <script src="./files/scripts.js"></script>
-
-    <title>Faction Hub Titles</title>
+    <title>Hueco Titles Home</title>
+    <link href="files/fonts.css" rel="stylesheet">
+    <link href="files/styling.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Condensed:wght@400;700&family=Roboto+Mono:wght@400;700&family=Oswald:wght@400;700&family=Merriweather:wght@400;700&family=Ubuntu:wght@400;700&family=Nunito:wght@400;700&family=Indie+Flower&family=Bangers&family=Amatic+SC:wght@400;700&family=Permanent+Marker&family=Patrick+Hand&family=Jura:wght@400;700&family=Josefin+Sans:wght@400;700&family=Grenze+Gotisch:wght@400;700&family=Fredoka+One&family=Fondamento&family=DejaVu+Sans+Mono&family=Creepster&family=Kalam&family=Luckiest+Guy&family=Titillium+Web:wght@400;700&family=Special+Elite&family=Sarpanch:wght@400;700&family=Source+Sans+Pro:wght@400;700&family=Gotham:wght@400;700&family=EB+Garamond:wght@400;700&family=Bodoni+Moda:wght@400;700&family=Cinzel:wght@400;700&family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <div id="factionCheck">
-        <div id="factionCheckTitle">Please select the correct faction:</div>
+    <div id="formContainer">
+        <h1 style="font-size:2rem; margin-bottom: 24px;">Faction Title Generators</h1>
         <div id="buttonGrid">
-
-            <a href="./files/sereiteiTitles.html" style="text-decoration: none; color: inherit;">
-                <div class="factionSelectButton">
-                    <img src="./files/images/sereiteiLogo.png" alt="Faction" />
-                </div>
+            <a class="factionSelectButton" href="files/sereiteiTitles.html" title="Sereitei Title Generator">
+                <img src="files/images/sereiteiLogo.png" alt="Sereitei">
             </a>
-
-            <a href="./files/huecoTitles.html" style="text-decoration: none; color: inherit;">
-                <div class="factionSelectButton">
-                    <img src="./files/images/huecoLogo.png" alt="Faction" />
-                </div>
+            <a class="factionSelectButton" href="files/huecoTitles.html" title="Hueco Mundo Title Generator">
+                <img src="files/images/huecoLogo.png" alt="Hueco Mundo">
             </a>
-
-            <a href="./files/wandenTitles.html" style="text-decoration: none; color: inherit;">
-                <div class="factionSelectButton">
-                    <img src="./files/images/wandenreichLogo.png" alt="Faction" />
-                </div>
+            <a class="factionSelectButton" href="files/fullbringTitles.html" title="X-Cution Title Generator">
+                <img src="files/images/fullbringLogo.png" alt="X-Cution">
             </a>
-
-            <a href="./files/fullbringTitles.html" style="text-decoration: none; color: inherit;">
-                <div class="factionSelectButton">
-                    <img src="./files/images/fullbringLogo.png" alt="Faction" />
-                </div>
+            <a class="factionSelectButton" href="files/wandenTitles.html" title="Wandenreich Title Generator">
+                <img src="files/images/wandenreichLogo.png" alt="Wandenreich">
             </a>
-            
-            <!-- <a href="./files/hellTitles.html" style="text-decoration: none; color: inherit;">
-                <div class="factionSelectButton">
-                    <img src="./files/images/hellLogo.png" alt="Faction" />
-                </div>
-            </a> -->
-
         </div>
     </div>
-
 </body>
 </html>
