--- a/files/hellTitles.html
+++ b/files/hellTitles.html
@@ -32,7 +32,7 @@
             <div id="archonContainer" style="display: none;">
                 <h1>Select Sin rank:</h1>
                 <select id="archonRankSelect">
-                     <option value="Archon of Tyranny">Archon of Tyranny</option> -->
+                     <option value="Archon of Tyranny">Archon of Tyranny</option>
                     <!-- <option value="Sin of Pride">Sin of Pride</option>
                     <option value="Sin of Wrath">Sin of Wrath</option>
                     <option value="Sin of Greed">Sin of Greed</option>
@@ -71,9 +71,19 @@
         
         <div id="htmlCodeContainer" style="margin-top: 20px;">
             <h1>HTML Code:</h1>
-            <h2><pre id="htmlCode"></pre></h2>
+            <pre id="htmlCode"></pre>
+            <button class="copy-btn" type="button" onclick="copyHtmlCode()">Copy</button>
         </div>
-        
+        <script>
+        function copyHtmlCode() {
+            const code = document.getElementById('htmlCode').textContent;
+            navigator.clipboard.writeText(code).then(function() {
+                const btn = document.querySelector('.copy-btn');
+                btn.textContent = 'Copied!';
+                setTimeout(() => btn.textContent = 'Copy', 1200);
+            });
+        }
+        </script>
 
     </div>
 
@@ -81,4 +91,4 @@
     <script src="./hellScripts.js"></script>
 
 </body>
-</html> --> 
+</html> -->
