--- a/files/wandenTitles.html
+++ b/files/wandenTitles.html
@@ -111,9 +111,19 @@
         
         <div id="htmlCodeContainer" style="margin-top: 20px;">
             <h1>HTML Code:</h1>
-            <h2><pre id="htmlCode"></pre></h2>
+            <pre id="htmlCode"></pre>
+            <button class="copy-btn" type="button" onclick="copyHtmlCode()">Copy</button>
         </div>
-        
+        <script>
+        function copyHtmlCode() {
+            const code = document.getElementById('htmlCode').textContent;
+            navigator.clipboard.writeText(code).then(function() {
+                const btn = document.querySelector('.copy-btn');
+                btn.textContent = 'Copied!';
+                setTimeout(() => btn.textContent = 'Copy', 1200);
+            });
+        }
+        </script>
 
     </div>
 
