style fix attempt 2

--- a/files/sereiteiTitles.html
+++ b/files/sereiteiTitles.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sereitei Titles</title>
-    <link href="fonts.css" rel="stylesheet">
-    <link href="styling.css" rel="stylesheet">
+    <link href="./fonts.css" rel="stylesheet">
+    <link href="./styling.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Condensed:wght@400;700&family=Roboto+Mono:wght@400;700&family=Oswald:wght@400;700&family=Merriweather:wght@400;700&family=Ubuntu:wght@400;700&family=Nunito:wght@400;700&family=Indie+Flower&family=Bangers&family=Amatic+SC:wght@400;700&family=Permanent+Marker&family=Patrick+Hand&family=Jura:wght@400;700&family=Josefin+Sans:wght@400;700&family=Grenze+Gotisch:wght@400;700&family=Fredoka+One&family=Fondamento&family=DejaVu+Sans+Mono&family=Creepster&family=Kalam&family=Luckiest+Guy&family=Titillium+Web:wght@400;700&family=Special+Elite&family=Sarpanch:wght@400;700&family=Source+Sans+Pro:wght@400;700&family=Gotham:wght@400;700&family=EB+Garamond:wght@400;700&family=Bodoni+Moda:wght@400;700&family=Cinzel:wght@400;700&family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -178,7 +178,7 @@
     </div>
 
 
-    <script src="sereiteiScript.js"></script>
+    <script src="./sereiteiScript.js"></script>
 
 </body>
 </html>
