--- a/files/wandenTitles.html
+++ b/files/wandenTitles.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 
-
     <div id="formContainer">
         <a href="../home.html"><h1>Back</h1></a>
         <form>
@@ -129,6 +128,6 @@
 
 
     <script src="./wandenScripts.js"></script>
-
+    </div>
 </body>
 </html>
