updated venire titles

--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -61,12 +61,16 @@
             <div id="venireContainer" style="display: none;">
                 <h1>Choose Venire Rank:</h1>
                 <select id="venireSelect">
-                    <option value="Kuza [一]">Kuza [一]</option>
-                    <option value="Kuza [二]">Kuza [二]</option>
-                    <option value="Kuza [三]">Kuza [三]</option>
-                    <option value="Kuza [四]">Kuza [四]</option>
-                    <option value="Kuza [五]">Kuza [五]</option>
-                    <option value="Kuza [六]">Kuza [六]</option>
+                    <option value="Venire Solis">Venire Solis</option>
+                    <option value="Venire Luna">Venire Luna</option>
+                    <option value="Venire Aeris">Venire Aeris</option>	
+                    <option value="Venire Culminis">Venire Culminis</option>
+                    <option value="Venire Aquae">Venire Aquae</option>
+                    <option value="Venire Vitae">Venire Vitae</option>
+                    <option value="Venire Flammae">Venire Flammae</option>
+                    <option value="Venire Incendiorum">Venire Incendiorum</option>
+                    <option value="Venire Sordium">Venire Sordium</option>
+                    <option value="Venire Petrae">Venire Petrae</option>
                 </select>
             </div>
 
