added orihime title

--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -84,6 +84,7 @@
                     <option value="<br/>006 | Jackie Tristan">Jackie Tristan</option>
                     <option value="<br/>003 | Riruka Dokugamine">Riruka Dokugamine</option>
                     <option value="<br/>005 | Yukio Hans Vorarlberna">Yukio Hans Vorarlberna</option>
+                    <option value="<br/>008 | Orihime Inoue">Orihime Inoue</option>
                 </select>
             </div>
 
