--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -33,7 +33,6 @@
             <div id="custodesContainer" style="display: none;">
                 <h1>Select Custodes rank:</h1>
                 <select id="custodesRankSelect">
-                    <option value="[主の剣] Gladius Domini">[主の剣] Gladius Domini</option>
                     <option value="[ 土 ] Custos Sordium">[ 土 ] Custos Sordium</option>
                     <option value="[ 岩 ] Custos Petrae">[ 岩 ] Custos Petrae</option>
                     <option value="[ 日 ] Custos Solis">[ 日 ] Custos Solis</option>
@@ -50,6 +49,7 @@
             <div id="dominusContainer" style="display: none;">
                 <h1>Choose Dominus Rank:</h1>
                 <select id="dominusSelect">
+                    <option value="Gladius Domini">[主の剣] Gladius Domini</option>
                     <option value="Dominus Terrae">[ 地球の主 ] Dominus Terrae</option>
                     <option value="Dominus Stellarum">[ 星の主 ] Dominus Stellarum</option>
                     <option value="Dominus Ventus">[ 風の主 ] Dominus Ventus</option>
