manifestation artist update

--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -77,14 +77,15 @@
             <div id="manifestationContainer" style="display: none;">
                 <h1>Choose Full Manifestation Artist Rank:</h1>
                 <select id="manifestationSelect">
-                    <option value="<br/>001 | Kūgo Ginjō">Kūgo Ginjō</option>
-                    <option value="<br/>002 | Tsukishima Shūkurō">Tsukishima Shūkurō</option>
-                    <option value="<br/>004 | Giriko Kutsuzawa">Giriko Kutsuzawa</option>
-                    <option value='<br/>007 | Yasutora "Chad" Sado'>Yasutora "Chad" Sado</option>
-                    <option value="<br/>006 | Jackie Tristan">Jackie Tristan</option>
-                    <option value="<br/>003 | Riruka Dokugamine">Riruka Dokugamine</option>
-                    <option value="<br/>005 | Yukio Hans Vorarlberna">Yukio Hans Vorarlberna</option>
-                    <option value="<br/>008 | Orihime Inoue">Orihime Inoue</option>
+                    <option value="<br/>001 | Kūgo Ginjō">The Riftbearer (Kūgo Ginjō)</option>
+                    <option value="<br/>002 | Tsukishima Shūkurō">The Mind-Scribe (Tsukishima Shūkurō)</option>
+                    <option value="<br/>003 | Giriko Kutsuzawa">The Chrono-Judge (Giriko Kutsuzawa)</option>
+                    <option value="<br/>004 | Jackie Tristan">The Gritbound Striker (Jackie Tristan)</option>
+                    <option value="<br/>005 | Orihime Inoue">The Reversal Bloom (Orihime Inoue)</option>
+                    <option value="<br/>006 | Yukio Hans Vorarlberna">The Digital Warden (Yukio Hans Vorarlberna)</option>
+                    <option value="<br/>007 | Riruka Dokugamine">The Selective Heart (Riruka Dokugamine)</option>
+                    <option value="<br/>008 | Moe Shishigawara">The Luck-Forged Blade (Moe Shishigawara)</option>
+                    <option value="<br/>009 | Yasutora &quot;Chad&quot; Sado">The Brazen Pillar (Yasutora "Chad" Sado)</option>
                 </select>
             </div>
 
