udpates fulblring tiitler

--- a/files/fullbringTitles.html
+++ b/files/fullbringTitles.html
@@ -24,37 +24,35 @@
 
             <h1>Select Rank:</h1>
             <select id="rankSelect">
-                <option value="dominus">Dominus</option>
-                <option value="custodes">Custodes</option>
+                <option value="dominus">Lord</option>
+                <option value="custodes">Ranger</option>
                 <option value="venire">Venire</option>
                 <option value="manifestation">Full Manifestation Artists</option>
             </select>
 
             <div id="custodesContainer" style="display: none;">
-                <h1>Select Custodes rank:</h1>
+                <h1>Select Ranger rank:</h1>
                 <select id="custodesRankSelect">
-                    <option value="[ 土 ] Custos Sordium">[ 土 ] Custos Sordium</option>
-                    <option value="[ 岩 ] Custos Petrae">[ 岩 ] Custos Petrae</option>
-                    <option value="[ 日 ] Custos Solis">[ 日 ] Custos Solis</option>
-                    <option value="[ 月 ] Custos Luna">[ 月 ] Custos Luna</optiovenn>
-                    <option value="[ 空 ] Custos Aeris">[ 空 ] Custos Aeris</option>
-                    <option value="[ 峰 ] Custos Culminis">[ 峰 ] Custos Culminis</option>
-                    <option value="[ 水 ] Custos Aquae">[ 水 ] Custos Aquae</option>
-                    <option value="[ 原 ] Custos Vitae">[ 原 ] Custos Vitae</option>
-                    <option value="[ 火 ] Custos Flammae">[ 火 ] Custos Flammae</option>
-                    <option value="[ 炎 ] Custos Incendiorum">[ 炎 ] Custos Incendiorum</option>
+                    <option value="shadow">[ 影 ] Shadow Ranger — “Whisper of the Forgotten Path”</option>
+                    <option value="wind">[ 空 ] Wind Ranger — “Tempest Born, Blade Unbound”</option>
+                    <option value="water">[ 水 ] Water Ranger — “Flowing Silence of the Deep”</option>
+                    <option value="cinder">[ 火 ] Cinder Ranger — “Ashen Wrath of the Flame”</option>
+                    <option value="earth">[ 土 ] Earth Ranger — “Pillar of the Sleeping Realm”</option>
+                    <option value="solar">[ 金 ] Solar Ranger — “Light Unyielding, Flame of Judgment”</option>
+                    <option value="blossom">[ 桜 ] Blossom Ranger — “Petal Dance of the Crimson Bloom”</option>
+                    <option value="radiant">[ 光 ] Radiant Ranger — “Beacon of Dawn, Voice of Glory”</option>
                 </select>
             </div>
 
             <div id="dominusContainer" style="display: none;">
-                <h1>Choose Dominus Rank:</h1>
+                <h1>Select Lord title:</h1>
                 <select id="dominusSelect">
-                    <option value="Gladius Domini">[主の剣] Gladius Domini</option>
-                    <option value="Dominus Terrae">[ 地球の主 ] Dominus Terrae</option>
-                    <option value="Dominus Stellarum">[ 星の主 ] Dominus Stellarum</option>
-                    <option value="Dominus Ventus">[ 風の主 ] Dominus Ventus</option>
-                    <option value="Dominus Maria">[ 海の主 ] Dominus Maria</option>
-                    <option value="Dominus Cineris">[ 灰の主 ] Dominus Cineris</option>
+                    <option value="[ 影神 ] Kagegami, Lord of Shadows — “The Moonless Blade, Hidden in Twilight”">🜂 [ 影神 ] Kagegami, Lord of Shadows — “The Moonless Blade, Hidden in Twilight”</option>
+                    <option value="[ 風神 ] Kazegami, Lord of Wind — “The Gale That Whispers Ruin”">🜁 [ 風神 ] Kazegami, Lord of Wind — “The Gale That Whispers Ruin”</option>
+                    <option value="[ 海神 ] Umigami, Lord of Water — “The Abyssal Flow, Drenched in Serenity”">🜄 [ 海神 ] Umigami, Lord of Water — “The Abyssal Flow, Drenched in Serenity”</option>
+                    <option value="[ 炎神 ] Enkigami, Lord of Flame — “The Crimson Devourer, Born of Ash”">🜃 [ 炎神 ] Enkigami, Lord of Flame — “The Crimson Devourer, Born of Ash”</option>
+                    <option value="[ 土神 ] Tsuchigami, Lord of Earth — “The Warden Beneath All Thrones”">🜃 [ 土神 ] Tsuchigami, Lord of Earth — “The Warden Beneath All Thrones”</option>
+                    <option value="[ 元神 ] Genshin, Archon of Essence — “Bearer of All, Bound by None”">🜨 [ 元神 ] Genshin, Archon of Essence — “Bearer of All, Bound by None”</option>
                 </select>
             </div>
             
