--- a/files/huecoTitles.html
+++ b/files/huecoTitles.html
@@ -33,7 +33,7 @@
                 <h1>Select Espada rank:</h1>
                 <select id="espadaRankSelect">
                     <option value="Cero">Cero</option>
-                    <option value="Primero">Primero</option>
+                    <option value="Primera">Primera</option>
                     <option value="Segunda">Segunda</option>
                     <option value="Tercera">Tercera</option>
                     <option value="Cuatra">Cuatra</option>
