removed jag changed wach to vassal

--- a/files/wandenTitles.html
+++ b/files/wandenTitles.html
@@ -25,9 +25,7 @@
             <select id="rankSelect">
                 <option value="schutzstaffel">Schutzstaffel</option>
                 <option value="sternritter">Sternritter</option>
-                <option value="kommandant">Kommandant</option>
-                <option value="jagdarmee">Jagdarmee</option>
-                <option value="wachritter">Wachritter</option>
+                <option value="vassal">Vassal</option>
             </select>
 
             <div id="sternContainer" style="display: none;">
@@ -100,7 +98,7 @@
             </div>
 
             <div id="wachContainer" style="display: none;">
-                <h1>Choose Wachritter Rank:</h1>
+                <h1>Choose Vassal Rank:</h1>
                 <input type="text" id="wachRank" maxlength="1">
             </div>
 
