--- a/files/huecoTitles.html
+++ b/files/huecoTitles.html
@@ -24,19 +24,20 @@
 
             <h1>Select Rank:</h1>
             <select id="rankSelect">
-                <option value="fantasia">Espada De Fantasia</option>
                 <option value="espada">Espada</option>
-                <option value="primordiales">Los Primordiales</option>
+                <option value="originales">Los Originales</option>
+                <option value="horsemen">Horsemen of the Apocalypse</option>
+                <option value="fraccion">Principal Fraccion</option>
             </select>
 
-            <div id="espadaContainer" style="display: none;">
+            <div id="espadaContainer">
                 <h1>Select Espada rank:</h1>
                 <select id="espadaRankSelect">
                     <option value="Cero">Cero</option>
                     <option value="Primera">Primera</option>
                     <option value="Segunda">Segunda</option>
                     <option value="Tercera">Tercera</option>
-                    <option value="Cuatra">Cuatra</option>
+                    <option value="Cuarta">Cuarta</option>
                     <option value="Quinta">Quinta</option>
                     <option value="Sexta">Sexta</option>
                     <option value="Septima">Septima</option>
@@ -49,22 +50,37 @@
             <div id="fantasiaContainer" style="display: none;">
                 <h1>Choose Espada De Fantasia Rank:</h1>
                 <select id="fantasiaSelect">
-                    <option value="Blade">The Hollow King's Blade</option>
-                    <option value="Asun">Fantasia De Asun</option>
-                    <option value="Tiem">Fantasia De Tiem</option>
-                    <option value="Gravi">Fantasia De Gravi</option>
-                    <option value="Uma">Fantasia De Uma</option>
-                    <option value="Estrel">Fantasia De Estrel</option>
+                    <option value="Starrk">Starrk</option>
+                    <option value="Barragan">Barragan</option>
+                    <option value="Ulquiorra">Ulquiorra</option>
+                    <option value="Nnoitora">Nnoitora</option>
+                    <option value="Grimmjow">Grimmjow</option>
                 </select>
             </div>
             
             <div id="primordialesContainer" style="display: none;">
                 <h1>Choose Los Primordiales Rank:</h1>
                 <select id="primordialesSelect">
-                    <option value="Primordial Sword of Wrath">Primordial Sword of Wrath</option>
-                    <option value="Primal Lance of Despair">Primal Lance of Despair</option>
-                    <option value="Primeval Fin of The Depths">Primeval Fin of The Depths</option>
-                    <option value="Ancient Fist of Light">Ancient Fist of Light</option>
+                    <option value="War">War</option>
+                    <option value="Famine">Famine</option>
+                    <option value="Conquest">Conquest</option>
+                    <option value="Death">Death</option>
+                </select>
+            </div>
+
+            <div id="fraccionContainer" style="display: none;">
+                <h1>Select Principal Fraccion Rank:</h1>
+                <select id="fraccionSelect">
+                    <option value="Primera">Primera Principal Fraccion</option>
+                    <option value="Segunda">Segunda Principal Fraccion</option>
+                    <option value="Tercera">Tercera Principal Fraccion</option>
+                    <option value="Cuarta">Cuarta Principal Fraccion</option>
+                    <option value="Quinta">Quinta Principal Fraccion</option>
+                    <option value="Sexta">Sexta Principal Fraccion</option>
+                    <option value="Septima">Septima Principal Fraccion</option>
+                    <option value="Octava">Octava Principal Fraccion</option>
+                    <option value="Novena">Novena Principal Fraccion</option>
+                    <option value="Decima">Decima Principal Fraccion</option>
                 </select>
             </div>
 
